# pi-alarm-block

./: .windsurfrules  DEVELOPMENT.md  README.md  alarm-block.service  dev.sh  history.txt  install-remote.sh  install.sh  package-lock.json  pyproject.toml  requirements.txt  setup.py  start.sh  test_dev_mode.py
backend/: __init__.py  alarm.py  alarm_manager.py  alarm_manager.py.fix  alarms.py  audio_manager.py  audio_manager.py.fix  audio_manager.py.old  config.py  dependencies.py  gpio_handler.py  main.py  mock_pi_handler.py  pi_handler.py  rotary-encoder.py  settings_manager.py  test_alarm_scheduler.py  test_alarm_trigger.py  test_audio.py  websocket_manager.py
backend/data/: alarms.json  settings.json
backend/models/: alarm.py
backend/routes/: __init__.py  alarm_routes.py  audio_routes.py  schedule_routes.py  system_routes.py  websocket_routes.py
backend/services/: alarm_manager.py  audio_manager.py  settings_manager.py  websocket_manager.py
backend/services/audio_helpers/: alarm_audio.py  mock_audio_manager.py  white_noise.py
backend/sounds/alarm_sounds/: slow_morning.mp3:Zone.Identifier  you.mp3:Zone.Identifier
backend/utils/: error_handler.py  logging.py
frontend/: .env.production  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css  styles.css
frontend/src/components/: AlarmForm.tsx  AlarmList.tsx  AudioControls.tsx  ScheduleControls.tsx  ShutdownButton.tsx
frontend/src/hooks/: useAlarmForm.ts  (+4 more)
hardware/: hardware_manager.py  mock_hardware_manager.py  rotary-encoder.py
(+9 files in other folders)
